--- a/hw03/cummings_hw03.Rmd
+++ b/hw03/cummings_hw03.Rmd
@@ -4,9 +4,40 @@ author: "Melvin Cummings"
 date: "`r format(Sys.time(), '%d %B %Y')`"
 output: html_notebook
 editor_options: 
-  chunk_output_type:inline
+  chunk_output_type:iinline
 ---
 ```{r}
 library(tidyverse)
 ```
+
+```{r}
+anscombe
+```
+
+```{r}
+ansc <-
+  bind_cols(
+    anscombe %>% 
+      select(matches("x")) %>% 
+      gather(dataset, "x"),
+    anscombe %>% 
+      select(matches("y")) %>% 
+      gather(key, "y")
+  ) %>%
+  select(-key) %>% 
+  mutate(dataset = gsub("x", "", dataset)) %>%  
+  as_tibble()
+```
+
+```{r}
+ansc %>%
+  group_by(dataset) %>%
+  summarize(
+    mean_x = mean(x),
+    stdev_x = sd(x), 
+    mean_y = mean(y),
+    stdev_y = sd(y)
+  ) 
+```
+
 
