--- a/Hw07/cummings_07.Rmd
+++ b/Hw07/cummings_07.Rmd
@@ -6,24 +6,189 @@ output: html_notebook
 editor_options: 
   chunk_output_type: inline
 ---
-
-
-
-
-
+##Part 1
 ```{r}
-library(dplyr)
 library(tidyverse)
 library(GGally)
+library(devtools)
 library(patchwork)
 ```
-
+###Import and wrangle
 ```{r}
-sparrow <- read_tsv("sparrows.txt")
+file_path <- "~/Bi485/cummings_melvin/data"
+
+sparrow <- read_tsv(file.path(file_path, "sparrows.txt"))
+
 sparrow
 ```
-```{r}
-file_path <- ("~/Bi485/cummings_melvin/Data/sparrows.txt")
 
+```{r}
+View(sparrow)
 ```
 
+```{r}
+sparrows <- sparrow %>%
+  mutate(box_group = "Sparrows",
+         row_order = 1: nrow(.))
+View(sparrows)
+```
+
+###Figure 2
+
+```{r}
+plot_box <-
+  sparrows %>%
+  ggplot(aes(x = box_group,
+             y = wingcrd)) +
+  geom_boxplot(width = 0.25) +
+  labs(x = NULL,
+       y = "Wing length (mm)")
+plot_box
+```
+
+```{r}
+plot_cleveland <-
+  sparrows %>%
+  ggplot(aes(x = wingcrd,
+             y = row_order)) +
+  geom_point() +
+  labs(x = "Wing length (mm)",
+       y = "Order of the data")
+plot_cleveland
+```
+
+```{r}
+plot_box + plot_cleveland + coord_flip()
+```
+
+###Figure 3
+
+```{r}
+p_culmen <- sparrows %>%
+  ggplot(aes(y = row_order)) +
+  geom_point(aes(x = culmen)) +
+  theme(axis.title.y=element_blank(),
+        axis.text.y=element_blank(),
+        axis.ticks.y=element_blank())
+p_culmen
+```
+
+```{r}
+p_napospi <- sparrows %>%
+  ggplot(aes(y = row_order)) +
+  geom_point(aes(x = nalospi)) +
+  theme(axis.title.y=element_blank(),
+        axis.text.y=element_blank(),
+        axis.ticks.y=element_blank())
+p_napospi
+```
+
+```{r}
+p_wt <- sparrows %>%
+  ggplot(aes(y = row_order)) +
+  geom_point(aes(x = wt)) +
+  theme(axis.title.y=element_blank(),
+        axis.text.y=element_blank(),
+        axis.ticks.y=element_blank())
+p_wt
+```
+
+```{r}
+p_wingcrd<- sparrows %>%
+  ggplot(aes(y = row_order)) +
+  geom_point(aes(x = wingcrd)) +
+  theme(axis.title.y=element_blank(),
+        axis.text.y=element_blank(),
+        axis.ticks.y=element_blank())
+p_wingcrd
+```
+
+```{r}
+p_tarsus <- sparrows %>%
+  ggplot(aes(y = row_order)) +
+  geom_point(aes(x = tarsus)) +
+  theme(axis.title.y=element_blank(),
+        axis.text.y=element_blank(),
+        axis.ticks.y=element_blank())
+p_tarsus
+```
+
+```{r}
+p_head <- sparrows %>%
+  ggplot(aes(y = row_order)) +
+  geom_point(aes(x = head)) +
+  theme(axis.title.y=element_blank(),
+        axis.text.y=element_blank(),
+        axis.ticks.y=element_blank())
+p_head
+```
+
+```{r}
+p_culmen + p_napospi + p_wt + p_wingcrd + p_tarsus + p_head + plot_layout(ncol = 3)
+```
+
+Three variables that seem to have outliers are; nalospi, wingcrd, and head.
+
+###Figure 5
+
+```{r}
+h1 <- sparrows %>%
+  filter(Month %in% 6:8) %>%
+  ggplot() +
+  geom_histogram(aes(x = wt),
+                 binwidth = 0.5,
+                 boundary = 0,
+                 closed = "right",
+                 color = "black") +
+  scale_x_continuous(breaks = seq(14, 28, by = 2))
+```
+
+```{r}
+h2 <- sparrows %>%
+  filter(Month %in% 6:8) %>%
+  mutate(Month = case_when(
+    Month == 6 ~ "June",
+    Month == 7 ~ "July",
+    Month == 8 ~ "August")) %>%
+  ggplot() +
+  geom_histogram(aes(x = wt),
+                 binwidth = 0.5,
+                 boundary = 0,
+                 color = "black") +
+  scale_x_continuous(breaks = seq(14, 28, by = 2)) +
+  facet_wrap(~ Month, ncol = 1)
+```
+
+```{r}
+h1 + h2
+```
+
+###Figure 10
+
+```{r}
+sparrows %>% ggscatmat(columns = 1:7)
+```
+
+###Figure 11
+
+```{r}
+month_order = c("May", "June", "July", "August", "September")
+sparrows %>%
+  filter(Month %in% 5:9,
+Sex != 0) %>%
+  mutate(Month = case_when(
+    Month == 5 ~ "May",
+    Month == 6 ~ "June",
+    Month == 7 ~ "July",
+    Month == 8 ~ "August",
+    Month == 9 ~ "September"),
+    Month = factor(Month, levels = month_order, ordered = TRUE),
+    Sex = ifelse(Sex == 4, "Male", "Female")) %>%
+  ggplot(aes(x = wingcrd,
+y = wt)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = FALSE) +
+  facet_grid(Sex ~ Month)
+```
+
+The only negative plot is males in may.
